[tool.poetry]
name = "hybridagi"
version = "0.2.32"
description = "The Programmable Neuro-Symbolic AGI"
readme = "README.md"
authors = ["Yoan Sallami"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
homepage = "https://github.com/SynaLinks/HybridAGI"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-dotenv = ">=1.0.1"
sentence-transformers = ">=2.6.0"
duckduckgo-search = ">=5.2.1"
falkordb = ">=1.0.3"
dspy-ai = ">=2.4.10"
colorama = ">=0.4.6"
mistralai = ">=0.1.8"
faiss-cpu = ">=1.8.0.post1"
tree-sitter = ">=0.22.3"
tree-sitter-python = ">=0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"