[tool.poetry]
name = "hybridagi"
version = "0.2.4356"
description = "The Programmable Neuro-Symbolic Cypher-based AGI"
readme = "README.md"
authors = ["Yoan Sallami"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[project.urls]
homepage = "https://github.com/SynaLinks/HybridAGI"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sentence-transformers = ">=2.6.0"
falkordb = ">=1.0.7"
dspy-ai = "==2.4.10"
colorama = ">=0.4.6"
faiss-cpu = ">=1.8.0.post1"

pytest = ">=8.2.2"

pyjson5 = "^1.6.6"
pyvis = "^0.3.2"
networkx = "^3.3"
tabulate = "^0.9.0"
thefuzz = "^0.22.1"
jinja2 = "^3.1.4"
transformers = "^4.42.4"
datasets = "^2.20.0"
accelerate = "^0.32.1"
torch = "^2.3.1"
python-dotenv = "^1.0.1"
tqdm = "^4.66.5"
debugpy = "1.8.2"
pypdf = "^4.3.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"